# cpp-engineering-lab

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example.cpp  main.cpp
apps/demo/: main.cpp
docs/: week-01-RAII-and-uniquefd.md
include/cpp_lab/: unique_fd.h
include/cpp_lab/storage/: record.h  record_codec.h
src/: unique_fd.cpp
src/core/: unique_fd.cpp
